removed unnecessary classes from elements

--- a/index.html
+++ b/index.html
@@ -1,124 +1,249 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    	<meta charset="utf-8">
-    	<meta name="keywords" content="pine's site">
-    	<meta name="description" content="portfolio site">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta property="og:image" content=”https://github.com/PinetheApple/PinetheApple.github.io/blob/main/images/pineappleinspace.jpg”/>
-		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://PinetheApple.github.io"/>
-        <meta name="theme-color" content="#0d0d0d"/>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="keywords" content="pine's site" />
+    <meta name="description" content="portfolio site" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta property="og:image"
+    content=”https://github.com/PinetheApple/PinetheApple.github.io/blob/main/images/pineappleinspace.jpg”/>
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://PinetheApple.github.io" />
+    <meta name="theme-color" content="#0d0d0d" />
 
-		<title>Pine Space</title>
+    <title>Pine Space</title>
 
-		<!--favicon-->
-		<link rel="apple-touch-icon" sizes="180x180" href="./images/favicon_io/apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon_io/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="./images/favicon_io/favicon-16x16.png">
-		<link rel="manifest" href="./images/favicon_io/site.webmanifest">
+    <!--favicon-->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./images/favicon_io/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon_io/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./images/favicon_io/favicon-16x16.png"
+    />
+    <link rel="manifest" href="./images/favicon_io/site.webmanifest" />
 
-		<!--kit-->
-		<script src="https://kit.fontawesome.com/2292cc943b.js" crossorigin="anonymous"></script>
+    <!--kit-->
+    <script
+      src="https://kit.fontawesome.com/2292cc943b.js"
+      crossorigin="anonymous"
+    ></script>
 
-		<!-- external CSS link -->
-		<link rel="stylesheet" href="styles/global.css">
-        <link rel="stylesheet" href="styles/index.css">
-</head>
+    <!-- external CSS link -->
+    <link rel="stylesheet" href="styles/global.css" />
+    <link rel="stylesheet" href="styles/index.css" />
+  </head>
 
-<body>
-	<div class="container">
-        <nav class="pagelinks">
-            <a href="index.html"><img src="images/logo.png" alt="Logo" height="36px" width="35px"></a>
-            <ul class="innerlinks">
-                <li><a href="about.html">About</a></li>
-                <li><a href="about.html#experience">Experience</a></li>
-                <li><a href="index.html#projects">Projects</a></li>
-                <li><a href="index.html#contact">Contact</a></li>
-                <li><a class="button resume-btn" href="https://www.dropbox.com/s/j7rq8jbu6dgkftg/pine_resume.pdf?dl=1" download="jonathan_resume">Resume</a></li>
-            </ul>
-            <div class="ham">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
+  <body>
+    <div class="container">
+      <nav class="pagelinks">
+        <a href="index.html"
+          ><img src="images/logo.png" alt="Logo" height="36px" width="35px"
+        /></a>
+        <ul class="innerlinks">
+          <li><a href="about.html">About</a></li>
+          <li><a href="about.html#experience">Experience</a></li>
+          <li><a href="index.html#projects">Projects</a></li>
+          <li><a href="index.html#contact">Contact</a></li>
+          <li>
+            <a
+              class="button resume-btn"
+              href="https://www.dropbox.com/s/j7rq8jbu6dgkftg/pine_resume.pdf?dl=1"
+              download="jonathan_resume"
+              >Resume</a
+            >
+          </li>
+        </ul>
+        <div class="ham">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
+      </nav>
+      <!--end of navigation-->
+
+      <nav class="leftsection">
+        <ul>
+          <li>
+            <a href="https://www.discord.gg/rqVKvVe" target="_blank"
+              ><i class="fa-brands fa-discord fa-xl" aria-hidden="true"></i></a
+            ><span class="sr-only">discord server link</span>
+          </li>
+          <li>
+            <a href="https://github.com/PinetheApple" target="_blank"
+              ><i class="fa-brands fa-github fa-xl" aria-hidden="true"></i></a
+            ><span class="sr-only">github profile link</span>
+          </li>
+          <li>
+            <a href="https://codepen.io/pinetheapple" target="_blank"
+              ><i class="fa-brands fa-codepen fa-xl" aria-hidden="true"></i></a
+            ><span class="sr-only">codepen account link</span>
+          </li>
+          <li><div class="line"></div></li>
+        </ul>
+      </nav>
+      <!--end of left section-->
+
+      <div class="rightsection">
+        <p class="rotate90">
+          <a href="mailto:pinespace889@gmail.com">pinespace889@gmail.com</a>
+        </p>
+        <div class="line"></div>
+      </div>
+      <!--end of right section-->
+
+      <main>
+        <section class="hero">
+          <h1>Jonathan Paul</h1>
+          <p>Student<span>Web Developer</span></p>
+        </section>
+        <!--end of hero section-->
+
+        <section id="projects">
+          <h2>Projects</h2>
+          <div class="projlist">
+            <div class="proj">
+              <div class="projlinks">
+                <a
+                  href="https://pinetheapple.github.io/PinetheApple_v1.github.io/"
+                  target="_blank"
+                  ><i
+                    class="fa-solid fa-arrow-up-right-from-square fa-xl"
+                    aria-label="website link"
+                    aria-hidden="true"
+                  ></i
+                ></a>
+                <a
+                  href="https://github.com/PinetheApple/PinetheApple_v1.github.io"
+                  target="_blank"
+                  ><i
+                    class="fa-brands fa-github fa-xl"
+                    aria-label="github repository link"
+                    aria-hidden="true"
+                  ></i
+                ></a>
+              </div>
+              <h4>Old portfolio website</h4>
+              A simple responsive website built using HTML, CSS and Javascript
+              hosted using github pages.
             </div>
-        </nav><!--end of navigation-->
+            <!--project 1 end-->
+            <div class="proj">
+              <div class="projlinks">
+                <a
+                  href="https://github.com/PinetheApple/DiscordMusicBot"
+                  target="_blank"
+                  ><i
+                    class="fa-brands fa-github fa-xl"
+                    aria-label="github repository link"
+                    aria-hidden="true"
+                  ></i
+                ></a>
+              </div>
+              <h4>Discord Music Bot</h4>
+              A discord music bot built using python (disnake.py) on an already
+              existing base with some added functionality in the form of
+              interactive buttons.
+            </div>
+            <!--project 2 end-->
+            <div class="proj">
+              <div class="projlinks">
+                <a
+                  href="https://github.com/PinetheApple/VC-Robot"
+                  target="_blank"
+                  ><i
+                    class="fa-brands fa-github fa-xl"
+                    aria-label="github repository link"
+                    aria-hidden="true"
+                  ></i
+                ></a>
+              </div>
+              <h4>Voice Control Application</h4>
+              A simple android application built on MIT App Inventor. Commands
+              can be input by voice or by using touch controls. These are then
+              updated and stored on Firebase.
+            </div>
+            <!--project 3 end-->
+            <div class="proj">
+              <div class="projlinks">
+                <a href="https://github.com/PinetheApple/swapi" target="_blank"
+                  ><i
+                    class="fa-brands fa-github fa-xl"
+                    aria-label="github repository link"
+                    aria-hidden="true"
+                    aria-label="github repository link"
+                  ></i
+                ></a>
+              </div>
+              <h4>Swapi website</h4>
+              A single page web application that uses the Star Wars API (swapi)
+              and generates random star wars characters with some information
+              about them.
+            </div>
+            <!--project 3 end-->
+          </div>
+        </section>
+        <!--end of projects section-->
 
-        <nav class="leftsection">
-            <ul>
-                <li><a href="https://www.discord.gg/rqVKvVe" target="_blank"><i class="fa-brands fa-discord fa-xl" aria-hidden="true"></i></a><span class="sr-only">discord server link</span></li>
-                <li><a href="https://github.com/PinetheApple" target="_blank"><i class="fa-brands fa-github fa-xl" aria-hidden="true"></i></a><span class="sr-only">github profile link</span></li>
-                <li><a href="https://codepen.io/pinetheapple" target="_blank"><i class="fa-brands fa-codepen fa-xl" aria-hidden="true"></i></a><span class="sr-only">codepen account link</span></li>
-                <li><div class="line"></div></li>
-            </ul>
-        </nav><!--end of left section-->
+        <section id="contact">
+          <h2>Contact</h2>
+          <p>
+            Always happy to hear about what you think of this site or any
+            project you're interested in showing me. Feel free to email or DM on
+            discord :)
+          </p>
+          <a href="mailto:pinespace889@gmail.com" class="button">Email Me</a>
+        </section>
+        <!--end of contact section-->
+      </main>
+      <!--end of main-->
 
-        <div class="rightsection">
-            <p class="rotate90"><a href="mailto:pinespace889@gmail.com">pinespace889@gmail.com</a></p>
-            <div class="line"></div>
-        </div><!--end of right section-->
-
-        <main>
-            <section class="hero">
-                <h1>Jonathan Paul</h1>
-                <p>Student<span>Web Developer</span></p>
-            </section><!--end of hero section-->
-
-            <section id="projects">
-                <h2>Projects</h2>
-                <div class="projlist">
-                    <div class="proj proj1">
-                        <div class="projlinks">
-                            <a href="https://pinetheapple.github.io/PinetheApple_v1.github.io/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square fa-xl" aria-label="website link" aria-hidden="true"></i></a>
-                            <a href="https://github.com/PinetheApple/PinetheApple_v1.github.io" target="_blank"><i class="fa-brands fa-github fa-xl" aria-label="github repository link" aria-hidden="true"></i></a>
-                        </div>
-                        <h4 class="proj_name">Old portfolio website</h4>
-                        A simple responsive website built using HTML, CSS and Javascript hosted using github pages.
-                    </div><!--project 1 end-->
-                    <div class="proj proj2">
-                        <div class="projlinks">
-                            <a href="https://github.com/PinetheApple/DiscordMusicBot" target="_blank"><i class="fa-brands fa-github fa-xl" aria-label="github repository link" aria-hidden="true"></i></a>
-                        </div>
-                        <h4 class="proj_name">Discord Music Bot</h4>
-                        A discord music bot built using python (disnake.py) on an already existing base with some added functionality in the form of interactive buttons.
-                    </div><!--project 2 end-->
-                    <div class="proj proj3">
-                        <div class="projlinks">
-                            <a href="https://github.com/PinetheApple/VC-Robot" target="_blank"><i class="fa-brands fa-github fa-xl" aria-label="github repository link" aria-hidden="true"></i></a>
-                        </div>
-                        <h4 class="proj_name">Voice Control Application</h4>
-                        A simple android application built on MIT App Inventor. Commands can be input by voice or by using touch controls. These are then updated and stored on Firebase.
-                    </div><!--project 3 end-->
-                    <div class="proj proj4">
-                        <div class="projlinks">
-                            <a href="https://github.com/PinetheApple/swapi" target="_blank"><i class="fa-brands fa-github fa-xl" aria-label="github repository link" aria-hidden="true" aria-label="github repository link"></i></a>
-                        </div>
-                        <h4 class="proj_name">Swapi website</h4>
-                        A single page web application that uses the Star Wars API (swapi) and generates random star wars characters with some information about them.
-                    </div><!--project 3 end-->
-                </div>
-            </section><!--end of projects section-->
-
-            <section id="contact">
-                <h2>Contact</h2>
-                <p>Always happy to hear about what you think of this site or any project you're interested in showing me. Feel free to email or DM on discord :) </p>
-                <a href="mailto:pinespace889@gmail.com" class="button">Email Me</a>
-            </section><!--end of contact section-->
-        </main><!--end of main-->
-
-        <footer>
-            <section class="connections">
-                <a href="https://www.discord.gg/rqVKvVe" target="_blank" aria-label="discord server link"><i class="fa-brands fa-discord fa-xl" aria-hidden="true"></i></a>
-                <a href="https://github.com/PinetheApple" target="_blank" aria-label="github profile link"><i class="fa-brands fa-github fa-xl" aria-hidden="true"></i></a>
-                <a href="https://codepen.io/pinetheapple" target="_blank" aria-label="codepen account link"><i class="fa-brands fa-codepen fa-xl" aria-hidden="true"></i></a>
-            </section><!--connections-->
-			<section class="details">
-				<p><a href="" target="blank"><i class="fa-solid fa-code-fork" aria-hidden="true"></i> Github repository</a></p>
-				<small>Ⓒ Jonathan. No rights reserved.</small>
-			</section><!--details-->
-        </footer><!--end of footer-->
+      <footer>
+        <section class="connections">
+          <a
+            href="https://www.discord.gg/rqVKvVe"
+            target="_blank"
+            aria-label="discord server link"
+            ><i class="fa-brands fa-discord fa-xl" aria-hidden="true"></i
+          ></a>
+          <a
+            href="https://github.com/PinetheApple"
+            target="_blank"
+            aria-label="github profile link"
+            ><i class="fa-brands fa-github fa-xl" aria-hidden="true"></i
+          ></a>
+          <a
+            href="https://codepen.io/pinetheapple"
+            target="_blank"
+            aria-label="codepen account link"
+            ><i class="fa-brands fa-codepen fa-xl" aria-hidden="true"></i
+          ></a>
+        </section>
+        <!--connections-->
+        <section class="details">
+          <p>
+            <a href="" target="blank"
+              ><i class="fa-solid fa-code-fork" aria-hidden="true"></i> Github
+              repository</a
+            >
+          </p>
+          <small>Ⓒ Jonathan. No rights reserved.</small>
+        </section>
+        <!--details-->
+      </footer>
+      <!--end of footer-->
     </div>
 
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
