--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
   <body>
     <div class="container">
       <nav class="pagelinks">
-        <a href="index.html"
-          ><img src="images/logo.png" alt="Logo" height="36px" width="35px"
-        /></a>
+        <div><a href="index.html">
+          <img src="images/logo.png" alt="Logo" height="36px" width="35px"/></a>
+        </div>
         <ul class="innerlinks">
           <li><a href="about.html">About</a></li>
           <li><a href="about.html#experience">Experience</a></li>
