--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
 
         <main>
             <section id="about">
-                <img src="./images/profile_picture.png" alt="profile image" height="370px" width="369px">
+                <img src="./images/profile_picture.png" alt="profile" height="370px" width="369px">
                 <section class="about_sec">
                     <h3>About Me</h3>
                     <p>Hello there. I'm Jonathan.</p>
