update to some info

--- a/about.html
+++ b/about.html
@@ -67,13 +67,14 @@
                     <h3>About Me</h3>
                     <p>Hello there. I'm Jonathan.</p>
                     <p>I am skilled at object-oriented programming. I'm comfortable working with Java and Python.</p>
-                    <p>I'm currently pursuing a degree in Computer Science while learning random stuff off the internet like web development and computer networking.</p>
-                    <p>I'm looking to collaborate on web-related projects.</p>
+                    <p>I'm currently pursuing a degree in Computer Science. Focused on learning about cyber security and penetration testing.</p>
+                    <p>I'm looking to collaborate on security or web related projects.</p>
                 </section>
             </section>
             <section id="experience">
                 <h2>Experience</h2>
-                <p>Business Web Solutions- <span>Intern</span><time> (3 months)</time></p>
+                <p>Business Web Solutions- <span>Web Development Intern</span><time> (3 months)</time></p>
+                <p>Bosch- <span>Student Trainee</span><time> (2 months)</time></p>
             </section>
         </main><!--end of main-->
 
