--- a/about.html
+++ b/about.html
@@ -1,96 +1,238 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    	<meta charset="utf-8">
-    	<meta name="keywords" content="pine's site">
-    	<meta name="description" content="portfolio site">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta property="og:image" content=”https://github.com/PinetheApple/PinetheApple.github.io/blob/main/images/pineappleinspace.jpg”/>
-		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://PinetheApple.github.io"/>
-        <meta name="theme-color" content="#0d0d0d"/>
+	<head>
+		<meta charset="utf-8" />
+		<meta
+			name="keywords"
+			content="pine's site" />
+		<meta
+			name="description"
+			content="portfolio site" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1" />
+		<meta property="og:image"
+		content=”https://github.com/PinetheApple/PinetheApple.github.io/blob/main/images/pineappleinspace.jpg”/>
+		<meta
+			property="og:type"
+			content="website" />
+		<meta
+			property="og:url"
+			content="https://PinetheApple.github.io" />
+		<meta
+			name="theme-color"
+			content="#0d0d0d" />
 
 		<title>Pine Space</title>
 
 		<!--favicon-->
-		<link rel="apple-touch-icon" sizes="180x180" href="./images/favicon_io/apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon_io/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="./images/favicon_io/favicon-16x16.png">
-		<link rel="manifest" href="./images/favicon_io/site.webmanifest">
+		<link
+			rel="apple-touch-icon"
+			sizes="180x180"
+			href="./images/favicon_io/apple-touch-icon.png" />
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="./images/favicon_io/favicon-32x32.png" />
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="16x16"
+			href="./images/favicon_io/favicon-16x16.png" />
+		<link
+			rel="manifest"
+			href="./images/favicon_io/site.webmanifest" />
 
 		<!--kit-->
-		<script src="https://kit.fontawesome.com/2292cc943b.js" crossorigin="anonymous"></script>
+		<script
+			src="https://kit.fontawesome.com/2292cc943b.js"
+			crossorigin="anonymous"></script>
 
 		<!-- external CSS link -->
-		<link rel="stylesheet" href="styles/global.css">
-        <link rel="stylesheet" href="styles/about.css">
-</head>
+		<link
+			rel="stylesheet"
+			href="styles/global.css" />
+		<link
+			rel="stylesheet"
+			href="styles/about.css" />
+	</head>
 
-<body>
-	<div class="container">
-        <nav class="pagelinks">
-            <div><a href="index.html">
-                <img src="images/logo.png" alt="Logo" height="36px" width="35px"/></a>
-            </div>
-            <ul class="innerlinks">
-                <li><a href="about.html">About</a></li>
-                <li><a href="about.html#experience">Experience</a></li>
-                <li><a href="index.html#projects">Projects</a></li>
-                <li><a href="index.html#contact">Contact</a></li>
-                <li><a class="button resume-btn" href="https://www.dropbox.com/s/j7rq8jbu6dgkftg/pine_resume.pdf?dl=1" download="jonathan_resume">Resume</a></li>
-            </ul>
-            <div class="ham">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </div>
-        </nav><!--end of navigation-->
+	<body>
+		<div class="container">
+			<nav class="pagelinks">
+				<div>
+					<a href="index.html">
+						<img
+							src="images/logo.png"
+							alt="Logo"
+							height="36px"
+							width="35px"
+					/></a>
+				</div>
+				<ul class="innerlinks">
+					<li><a href="about.html">About</a></li>
+					<li><a href="about.html#experience">Experience</a></li>
+					<li><a href="index.html#projects">Projects</a></li>
+					<li><a href="index.html#contact">Contact</a></li>
+					<li>
+						<a
+							class="button resume-btn"
+							href="https://www.dropbox.com/s/j7rq8jbu6dgkftg/pine_resume.pdf?dl=1"
+							download="jonathan_resume"
+							>Resume</a
+						>
+					</li>
+				</ul>
+				<div class="ham">
+					<span class="bar"></span>
+					<span class="bar"></span>
+					<span class="bar"></span>
+				</div>
+			</nav>
+			<!--end of navigation-->
 
-        <nav class="leftsection">
-            <ul>
-                <a href="https://www.discord.gg/rqVKvVe" target="_blank" aria-label="discord server link"><i class="fa-brands fa-discord fa-xl" aria-hidden="true"></i></a>
-                <a href="https://github.com/PinetheApple" target="_blank" aria-label="github profile link"><i class="fa-brands fa-github fa-xl" aria-hidden="true"></i></a>
-                <a href="https://codepen.io/pinetheapple" target="_blank" aria-label="codepen account link"><i class="fa-brands fa-codepen fa-xl" aria-hidden="true"></i></a>
-                <li><div class="line"></div></li>
-            </ul>
-        </nav><!--end of left section-->
+			<nav class="leftsection">
+				<ul>
+					<a
+						href="https://www.discord.gg/rqVKvVe"
+						target="_blank"
+						aria-label="discord server link"
+						><i
+							class="fa-brands fa-discord fa-xl"
+							aria-hidden="true"></i
+					></a>
+					<a
+						href="https://github.com/PinetheApple"
+						target="_blank"
+						aria-label="github profile link"
+						><i
+							class="fa-brands fa-github fa-xl"
+							aria-hidden="true"></i
+					></a>
+					<a
+						href="https://codepen.io/pinetheapple"
+						target="_blank"
+						aria-label="codepen account link"
+						><i
+							class="fa-brands fa-codepen fa-xl"
+							aria-hidden="true"></i
+					></a>
+					<li><div class="line"></div></li>
+				</ul>
+			</nav>
+			<!--end of left section-->
 
-        <div class="rightsection">
-            <p class="rotate90"><a href="mailto:pinespace889@gmail.com">pinespace889@gmail.com</a></p>
-            <div class="line"></div>
-        </div><!--end of right section-->
+			<div class="rightsection">
+				<p class="rotate90">
+					<a href="mailto:pinespace889@gmail.com"
+						>pinespace889@gmail.com</a
+					>
+				</p>
+				<div class="line"></div>
+			</div>
+			<!--end of right section-->
 
-        <main>
-            <section id="about">
-                <img src="./images/profile_picture.png" alt="profile" height="370px" width="369px">
-                <section class="about_sec">
-                    <h3>About Me</h3>
-                    <p>Hello there. I'm Jonathan.</p>
-                    <p>I am skilled at object-oriented programming. I'm comfortable working with Java and Python.</p>
-                    <p>I'm currently pursuing a degree in Computer Science. Focused on learning about cyber security and penetration testing.</p>
-                    <p>I'm looking to collaborate on security or web related projects.</p>
-                </section>
-            </section>
-            <section id="experience">
-                <h2>Experience</h2>
-                <p>Business Web Solutions- <span>Web Development Intern</span><time> (3 months)</time></p>
-                <p>Bosch- <span>Student Trainee</span><time> (2 months)</time></p>
-            </section>
-        </main><!--end of main-->
+			<main>
+				<section id="about">
+					<img
+						src="./images/profile_picture.png"
+						alt="profile"
+						height="370px"
+						width="369px" />
+					<section class="about_sec">
+						<h3>About Me</h3>
+						<p>Hello there. I'm Jonathan.</p>
+						<p>
+							I am skilled at object-oriented programming. I'm
+							comfortable working with Java and Python.
+						</p>
+						<p>
+							I'm currently pursuing a degree in Computer Science.
+							Focused on learning about cyber security and
+							penetration testing.
+						</p>
+						<p>
+							I'm looking to collaborate on security or web
+							related projects.
+						</p>
+					</section>
+				</section>
+				<section id="experience">
+					<h2>Experience</h2>
+					<h4>Web Development Intern</h4>
+					<p>
+						Business Web Solutions
+						<time> (3 months)</time>
+						<span class="description"
+							>Learned basics of web development along with
+							various web frameworks such as Django and
+							React</span
+						>
+					</p>
+					<h4>Student Trainee</h4>
+					<p>
+						Robert Bosch
+						<time> (2 months)</time>
+						<span class="description"
+							>Developed a tool to simplify the process of
+							migrating system modelling projects from IBM's
+							Rhapsody to Enterprise Architect using Rhapsody's
+							Java API
+						</span>
+					</p>
+				</section>
+			</main>
+			<!--end of main-->
 
-        <footer>
-            <section class="connections">
-                <a href="https://www.discord.gg/rqVKvVe" target="_blank" aria-label="discord server link"><i class="fa-brands fa-discord fa-xl" aria-hidden="true"></i></a>
-                <a href="https://github.com/PinetheApple" target="_blank" aria-label="github profile link"><i class="fa-brands fa-github fa-xl" aria-hidden="true"></i></a>
-                <a href="https://codepen.io/pinetheapple" target="_blank" aria-label="codepen account link"><i class="fa-brands fa-codepen fa-xl" aria-hidden="true"></i></a>
-            </section><!--connections-->
-			<section class="details">
-				<p><a href="https://github.com/PinetheApple/PinetheApple.github.io" target="_blank"><i class="fa-solid fa-code-fork" aria-hidden="true"></i> Github repository</a></p>
-				<small>Ⓒ Jonathan. No rights reserved.</small>
-			</section><!--details-->
-        </footer><!--end of footer-->
-    </div>
+			<footer>
+				<section class="connections">
+					<a
+						href="https://www.discord.gg/rqVKvVe"
+						target="_blank"
+						aria-label="discord server link"
+						><i
+							class="fa-brands fa-discord fa-xl"
+							aria-hidden="true"></i
+					></a>
+					<a
+						href="https://github.com/PinetheApple"
+						target="_blank"
+						aria-label="github profile link"
+						><i
+							class="fa-brands fa-github fa-xl"
+							aria-hidden="true"></i
+					></a>
+					<a
+						href="https://codepen.io/pinetheapple"
+						target="_blank"
+						aria-label="codepen account link"
+						><i
+							class="fa-brands fa-codepen fa-xl"
+							aria-hidden="true"></i
+					></a>
+				</section>
+				<!--connections-->
+				<section class="details">
+					<p>
+						<a
+							href="https://github.com/PinetheApple/PinetheApple.github.io"
+							target="_blank"
+							><i
+								class="fa-solid fa-code-fork"
+								aria-hidden="true"></i>
+							Github repository</a
+						>
+					</p>
+					<small>Ⓒ Jonathan. No rights reserved.</small>
+				</section>
+				<!--details-->
+			</footer>
+			<!--end of footer-->
+		</div>
 
-    <script src="script.js" defer></script>
-</body>
+		<script
+			src="script.js"
+			defer></script>
+	</body>
 </html>
