--- a/about.html
+++ b/about.html
@@ -94,30 +94,36 @@
 
 			<nav class="leftsection">
 				<ul>
-					<a
-						href="https://www.discord.gg/rqVKvVe"
-						target="_blank"
-						aria-label="discord server link"
-						><i
-							class="fa-brands fa-discord fa-xl"
-							aria-hidden="true"></i
-					></a>
-					<a
-						href="https://github.com/PinetheApple"
-						target="_blank"
-						aria-label="github profile link"
-						><i
-							class="fa-brands fa-github fa-xl"
-							aria-hidden="true"></i
-					></a>
-					<a
-						href="https://codepen.io/pinetheapple"
-						target="_blank"
-						aria-label="codepen account link"
-						><i
-							class="fa-brands fa-codepen fa-xl"
-							aria-hidden="true"></i
-					></a>
+					<li>
+						<a
+							href="https://www.discord.gg/rqVKvVe"
+							target="_blank"
+							aria-label="discord server link"
+							><i
+								class="fa-brands fa-discord fa-xl"
+								aria-hidden="true"></i
+						></a>
+					</li>
+					<li>
+						<a
+							href="https://github.com/PinetheApple"
+							target="_blank"
+							aria-label="github profile link"
+							><i
+								class="fa-brands fa-github fa-xl"
+								aria-hidden="true"></i
+						></a>
+					</li>
+					<li>
+						<a
+							href="https://tryhackme.com/p/PineApple"
+							target="_blank"
+							aria-label="tryhackme account profile link"
+							><i
+								class="fa-solid fa-cloud fa-xl"
+								aria-hidden="true"></i
+						></a>
+					</li>
 					<li><div class="line"></div></li>
 				</ul>
 			</nav>
