--- a/index.html
+++ b/index.html
@@ -266,11 +266,11 @@
 							aria-hidden="true"></i
 					></a>
 					<a
-						href="https://codepen.io/pinetheapple"
+						href="https://tryhackme.com/p/PineApple"
 						target="_blank"
-						aria-label="codepen account link"
+						aria-label="tryhackme account profile link"
 						><i
-							class="fa-brands fa-codepen fa-xl"
+							class="fa-solid fa-cloud fa-xl"
 							aria-hidden="true"></i
 					></a>
 				</section>
